force-app/main/default/objects/NPS_Survey_Archive__c/NPS_Survey_Archive__c.object-meta.xml
<CustomObject>
    <description>Historical NPS Survey responses. When a customer responds to an NPS survey, a snapshot of their Customer Survey record is taken when it is updated and a related NPS Survey Archive record is created using the snapshot.</description>
    <label>NPS Survey Archive</label>
    <nameField>
        <displayFormat>NPSA-{0000}</displayFormat>
        <label>NPS Survey Archive Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>NPS Survey Archives</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>