force-app/main/default/objects/NPS_Survey_Archive__c/fields/Account__c.field-meta.xml
<CustomField>
    <fullName>Account__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>NPS Survey Archives</relationshipLabel>
    <relationshipName>NPS_Survey_Archives</relationshipName>
    <type>Lookup</type>
</CustomField>