force-app/main/default/objects/NPS_Survey_Archive__c/fields/Customer_Survey__c.field-meta.xml
<CustomField>
    <fullName>Customer_Survey__c</fullName>
    <label>Customer Survey</label>
    <lookupFilter>
        <active>true</active>
        <errorMessage>The Customer Survey record must have a Survey Type of NPS.</errorMessage>
        <filterItems>
            <field>Customer_Survey__c.Survey_Type__c</field>
            <operation>equals</operation>
            <value>NPS</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Customer_Survey__c</referenceTo>
    <relationshipLabel>NPS Survey Archives</relationshipLabel>
    <relationshipName>NPS_Survey_Archives</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>