force-app/main/default/objects/NPS_Survey_Archive__c/fields/Is_Duplicate_Response__c.field-meta.xml
<CustomField>
    <fullName>Is_Duplicate_Response__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Is Duplicate Response</label>
    <type>Checkbox</type>
</CustomField>