force-app/main/default/objects/NPS_Survey_Archive__c/fields/Omni_Survey_Tracking__c.field-meta.xml
<CustomField>
    <fullName>Omni_Survey_Tracking__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Omni Survey Tracking</label>
    <referenceTo>Omni_Survey_Tracking__c</referenceTo>
    <relationshipLabel>NPS Survey Archives</relationshipLabel>
    <relationshipName>NPS_Survey_Archives</relationshipName>
    <type>Lookup</type>
</CustomField>