force-app/main/default/objects/NPS_Survey_Archive__c/fields/Question_1__c.field-meta.xml
<CustomField>
    <fullName>Question_1__c</fullName>
    <label>Question 1</label>
    <type>TextArea</type>
</CustomField>