force-app/main/default/objects/NPS_Survey_Archive__c/fields/Question_9__c.field-meta.xml
<CustomField>
    <fullName>Question_9__c</fullName>
    <label>Question 9</label>
    <length>500</length>
    <type>LongTextArea</type>
</CustomField>