force-app/main/default/objects/NPS_Survey_Archive__c/fields/Recipient_Contact__c.field-meta.xml
<CustomField>
    <fullName>Recipient_Contact__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Recipient Contact</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>NPS Survey Archives</relationshipLabel>
    <relationshipName>NPS_Survey_Archives</relationshipName>
    <type>Lookup</type>
</CustomField>