force-app/main/default/objects/NPS_Survey_Archive__c/fields/Recipient_Contact_Title__c.field-meta.xml
<CustomField>
    <fullName>Recipient_Contact_Title__c</fullName>
    <formula>Recipient_Contact__r.Title</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Recipient Contact Title</label>
    <type>Text</type>
</CustomField>