force-app/main/default/objects/NPS_Survey_Archive__c/fields/Response_1__c.field-meta.xml
<CustomField>
    <fullName>Response_1__c</fullName>
    <label>Response 1</label>
    <length>80</length>
    <type>Text</type>
</CustomField>