force-app/main/default/objects/NPS_Survey_Archive__c/fields/Response_1_Value__c.field-meta.xml
<CustomField>
    <fullName>Response_1_Value__c</fullName>
    <formula>IF( CONTAINS(Response_1__c, &quot;10&quot;), 
10, IF( CONTAINS(Response_1__c, &quot;9&quot;), 
9, IF( CONTAINS(Response_1__c, &quot;8&quot;), 
8, IF( CONTAINS(Response_1__c, &quot;7&quot;), 
7, IF( CONTAINS(Response_1__c, &quot;6&quot;), 
6, IF( CONTAINS(Response_1__c, &quot;5&quot;), 
5, IF( CONTAINS(Response_1__c, &quot;4&quot;), 
4, IF( CONTAINS(Response_1__c, &quot;3&quot;), 
3, IF( CONTAINS(Response_1__c, &quot;2&quot;), 
2, IF( CONTAINS(Response_1__c, &quot;1&quot;), 
1, IF( CONTAINS(Response_1__c, &quot;0&quot;), 
0, null)))))))))))</formula>
    <label>Response 1 Value</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>