force-app/main/default/objects/NPS_Survey_Archive__c/fields/Response_9__c.field-meta.xml
<CustomField>
    <fullName>Response_9__c</fullName>
    <label>Response 9</label>
    <length>500</length>
    <type>LongTextArea</type>
</CustomField>