force-app/main/default/objects/NPS_Survey_Archive__c/fields/Survey_Recipient_Name__c.field-meta.xml
<CustomField>
    <fullName>Survey_Recipient_Name__c</fullName>
    <label>Survey Recipient Name</label>
    <length>100</length>
    <type>Text</type>
</CustomField>